still more fixes

--- a/Registries/build.gradle
+++ b/Registries/build.gradle
@@ -36,6 +36,10 @@ processResources {
         expand props
     }
 }
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 
 publishing {
     publications {
